constraints/k8sannotationdenylabel_constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAnnotationDenyLabel
metadata:
  name: no-empty-nodeselector-with-cmdbid
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    annotations:
      - key: "scheduler.alpha.kubernetes.io/node-selector"
        value: ''
        label: "cmdbid"
